fix(SigninForm): center align note text on tablet screens

--- a/app/_modules/AuthModule/components/SigninForm/SigninForm.module.scss
+++ b/app/_modules/AuthModule/components/SigninForm/SigninForm.module.scss
@@ -89,7 +89,10 @@
   &__note {
     font-style: italic;
     max-width: 340px;
-    // align-self: flex-start;
+
+    @include tablet {
+      text-align: center;
+    }
   }
 }
 
